# doomscroll-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: releasing.md  sample-output.md  views-investigation.md
src/doomscroll_mcp/: __init__.py  browser.py  cli.py  config.py  errors.py  extract.py  humanize.py  server.py
tests/: test_config.py  test_duration.py  test_extract.py  test_filters.py
