[project]
name = "doomscroll-mcp"
version = "0.1.0"
description = "MCP server exposing Instagram Reels browsing to AI agents via Playwright."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
dependencies = [
    "mcp>=1.2.0",
    "playwright>=1.49.0",
]

[project.scripts]
doomscroll-mcp = "doomscroll_mcp.server:main"
doomscroll-login = "doomscroll_mcp.cli:login_main"

[project.urls]
Homepage = "https://github.com/Sho0pi/doomscroll-mcp"
Repository = "https://github.com/Sho0pi/doomscroll-mcp"
Issues = "https://github.com/Sho0pi/doomscroll-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doomscroll_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # long URLs/strings allowed
    "UP042",  # str+Enum is intentional (JSON-serializable error/state codes)
]
